<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/menu_sort"
        app:showAsAction="always"
        android:orderInCategory="100">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_popularity"
                    android:orderInCategory="100"
                    android:title="@string/sort_by_popularity"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_rating"
                    android:orderInCategory="200"
                    android:title="@string/sort_by_rating"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_revenue"
                    android:orderInCategory="300"
                    android:title="@string/sort_by_revenue"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_favorites"
                    android:orderInCategory="400"
                    android:title="@string/sort_by_favorites"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
