<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:title="@string/sort_text"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_popularity"
        android:title="@string/sort_by_popularity"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rating"
        android:title="@string/sort_by_rating"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_revenue"
        android:title="@string/sort_by_revenue"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>
