<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/error_image"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:alpha="0.2"
                    android:contentDescription="@string/error_image_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_no_connection" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/no_result"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/secondary_text_color" />

                <TextView
                    android:id="@+id/retry_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refine_search"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/secondary_text_color" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/no_favorites_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_favorites_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:alpha="0.2"
            android:contentDescription="@string/error_image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_no_favorite" />

        <TextView
            android:id="@+id/no_favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no_favorite_movie"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text_color" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>